test/bad/nullables/print01.px

(String->Void)? f = write
print f
